force-app/main/default/objects/MedicalDoc__c/MedicalDoc__c.object-meta.xml
<CustomObject>
    <label>Medical Document</label>
    <nameField>
        <label>Medical Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>