force-app/main/default/objects/MedicalDoc__c/fields/CreatedByRole__c.field-meta.xml
<CustomField>
    <fullName>CreatedByRole__c</fullName>
    <label>Created By Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>