force-app/main/default/objects/MedicalDoc__c/fields/Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity__c</fullName>
    <label>Sensitivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Sensitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>